# python-control

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/book_examples/: chapter-02-2.ipynb  chapter-05.ipynb  chapter-06.ipynb  chapter-07.ipynb  chapter-08.ipynb  chapter-09.ipynb  chapter-10.ipynb
docs/book_examples/chapter_12/: example_12_01.py  example_12_02.py  example_12_03.py  example_12_04.py  example_12_06.py  example_12_08.py  example_12_09.py
docs/examples/: chapter-02-1.ipynb  chapter-02-3.ipynb  chapter-02-4.ipynb  chapter-03.ipynb  chapter-04-01.ipynb  chapter-04-02.ipynb  chapter-05.ipynb  chapter-06.ipynb  chapter-07.ipynb  chapter-08.ipynb  chapter-09.ipynb  chapter-10.ipynb  chapter-11.ipynb
docs/examples/chapter_12/: example_12_05.py  example_12_10.py
docs/other_examples/: frequency_response_01.ipynb  frequency_response_02.ipynb  root_locus_design_01.ipynb  root_locus_design_02.ipynb
docs/other_examples/.ipynb_checkpoints/: modeling_01-checkpoint.ipynb
python_control/: __init__.py
python_control/core/: __init__.py  differential_equation.py  equation.py  exceptions.py  frequency_response.py  laplace_transform.py  root_locus.py  routh_hurwitz.py  signal_flow_graph.py  state_space.py  symbols.py  transfer_function.py
python_control/core/systems/: __init__.py  feedback.py  feedback_old.py  first_order.py  second_order.py  second_order_old.py
python_control/design/: __init__.py  frequency_response.py  general.py  root_locus.py  root_locus_old.py  ziegler_nichols.py
python_control/matplotlibwrapper/: axes.py
(+14 files in other folders)
